--- a/test/基础密码学作业3.md
+++ b/test/基础密码学作业3.md
@@ -1,1 +1,39 @@
+# 对称密码
+计算机的操作对象不是文字，而是由0和1组成的*比特序列*,比如:010000111。将现实生活中的东西映射成比特序列的操作称为*编码*。将字母表中的字母逐一进行编码，这种编码规则叫做*ASCII*。<br>
+## 一次性密码本
+一次性密码本的原理是：将明文和一串随机的比特序列进行XOR运算。<br>
+**栗子**
+- 将明文midnight的字符通过ASCII进行编码，产生一串比特序列。
+产生明文如下：<br>
+m->01101101<br>
+i->01101001<br>
+d->01100100<br>
+n->01101110<br>
+i->01101001<br>
+g->01100111<br>
+h->01101000<br>
+t->01110100<br>
+- 产生一段与明文长度相同的随机比特序列。可以用投硬币的方式产生。<br>
+01101011 11111010 01001000 11011000 01100101 11010101 10101111 00011100 密钥<br>
+- 将明文与密钥进行XOR运算并得到新的比特序列。<br>
+| /   | 比特序列                                                                 |  /  |
+| --- | :---------------------------------------------------------------------: | --：|
+| /   | 01101101 01101001 01100100 01101110 01101001 01100111 01101000 01110100 | 明文 |
+| XOR | 01101011 11111010 01001000 11011000 01100101 11010101 10101111 00011100 | 密钥 |
+| /   | 00000110 10010011 00101100 10110110 00001100 10110010 11000111 01101000 | 密文 |
+ -一次性密码本的解密，其实就是加密的反向运算，也就是说，用密文和密钥进行XOR运算，就可以得到明文。各位同学自己尝试一下解密吧！<br>
+ **CTF长征一小步**<br>
+ 为什么一次性密码本是无法破译的？？？<br>
+ **CTF长征小半步**<br>
+ bit byte word 的概念和关系。<br>
+## DES
+DES是将64比特明文加密成64比特密文的对称密码算法，它的密钥长度为56比特，在密钥中每隔7比特就会插入一个用于错误检查的比特,所以一共64比特。<br>
+DES是以64比特明文为一个单位来进行加密的，这64比特的一个单位成为一个分组，所以DES也是分组密码的一种。DES每次只能加密64比特的数据，如果加密的明文比较长就需要对DES加密过程进行迭代，迭代的加密方式成为模式，详见分组密码。<br>
+![](img_url)
+## 三重DES
+三重DES（3DES）就是将DES重复三次得到的一种密码算法。明文经三次DES处理才会变成密文，由于DES的密钥是56比特，所以3DES的密钥长度是168比特。三重DES的加密过程是“加密->**解密**->加密”。<br>
+## AES
+Rijndael分组密码算法于2000年被选为新一代AES。Rijndael分组长度为128比特，密钥长度以32item为单位，在128比特到256比特范围内选择。该算法由多个*轮*组成，使用SPN结构。<br>
+Rijndael输入分组128比特，首先逐字节的对16字节的输入进行处理。以每个字节的之为索引，从一张替换表中找到对应得值。也就是将一个字节的值换成另一个字节的值。<br>
+
 
