--- a/test/基础密码学作业3.md
+++ b/test/基础密码学作业3.md
@@ -28,15 +28,32 @@ t->01110100<br>
  bit byte word 的概念和关系。<br>
 ## DES
 DES是将64比特明文加密成64比特密文的对称密码算法，它的密钥长度为56比特，在密钥中每隔7比特就会插入一个用于错误检查的比特,所以一共64比特。<br>
-DES是以64比特明文为一个单位来进行加密的，这64比特的一个单位成为一个分组，所以DES也是分组密码的一种。DES每次只能加密64比特的数据，如果加密的明文比较长就需要对DES加密过程进行迭代，迭代的加密方式成为模式，详见分组密码。<br>
+DES是以64比特明文为一个单位来进行加密的，这64比特的一个单位成为一个分组，所以DES也是分组密码的一种。DES每次只能加密64比特的数据，如果加密的明文比较长就需要对DES加密过程进行迭代，迭代的加密方式称为*模式*，详见分组密码。<br>
 ### DES结构（Feistel网络）
 DES结构也叫Feistel网络，在Feistel网络中，加密的各个步骤成为**轮**，整个加密过程，就是若干次轮的循环。下图展示Feistel网络的一轮计算，DES是16轮循环的Feistel网络<br>
- ！[](https://github.com/jSomething-for-Nothing/cryptography/blob/master/test/Feistel网络中的一轮.png )
+ ！[](https://github.com/jSomething-for-Nothing/cryptography/blob/master/test/Feistel%E7%BD%91%E7%BB%9C%E4%B8%AD%E7%9A%84%E4%B8%80%E8%BD%AE.png )<br>
+ 中间的子密钥指本轮加密的密钥，Feistel网络每轮使用不同的子密钥。**轮函数**可以根据“右侧”和子密钥生成对“左侧”进行加密的比特序列。然后，我们用XOR将轮函数的输出与“左侧”进行合并。<br>
+ 每一轮的具体计算过程如下：<br>
+ - 输入数据等分成左右两分。
+ - 输入的右侧直接发送到输出的左侧。
+ - 输入的右侧发送到轮函数。
+ - 轮函数根据右侧数据和子密钥，计算出一串看上去随机的比特序列
+ - 上一步的比特序列与左侧数据进行XOR运算，并把结果作为加密的左侧。
+ 通过上述过程，可以看到，右侧并没有被加密，所以我们需要用不同的子密钥对一轮的处理多次，并在每两轮处理之间将左右数据对调。就像下面的模型图<br>
 ![](https://github.com/jSomething-for-Nothing/cryptography/blob/master/test/Feistel%E7%BD%91%E7%BB%9C%E4%B8%89%E8%BD%AE%E5%8A%A0%E5%AF%86.png)<br>
+### DES解密
+
 ## 三重DES
 三重DES（3DES）就是将DES重复三次得到的一种密码算法。明文经三次DES处理才会变成密文，由于DES的密钥是56比特，所以3DES的密钥长度是168比特。三重DES的加密过程是“加密->**解密**->加密”。<br>
+三重DES的解密过程，刚好和加密过程相反，是执行“解密->加密->解密”的操作。
 ## AES
 Rijndael分组密码算法于2000年被选为新一代AES。Rijndael分组长度为128比特，密钥长度以32item为单位，在128比特到256比特范围内选择。该算法由多个*轮*组成，使用SPN结构。<br>
-Rijndael输入分组128比特，首先逐字节的对16字节的输入进行处理。以每个字节的之为索引，从一张替换表中找到对应得值。也就是将一个字节的值换成另一个字节的值。<br>
+Rijndael输入分组128比特，Rijindael的加密过程分四步：<br>
+- 首先SubBytes处理,逐字节的对16字节的输入进行处理。以每个字节的值为索引，从一张替换表中找到对应得值。也就是将一个字节的值换成另一个字节的值。<br>
+- 其次ShiftRows处理：将上一步输出以字节为单位进行打乱处理。
+- MixColumns处理，对四字节的值进行比特运算，把他变成另一个4字节的值。
+- AddRoundKey处理，将MixColumns的输出与轮密钥进行XOR。
+在Rijndael中，需要进行10~14轮上述运算。每轮计算模型如下图所示<br>
+![]()
 
 
