--- a/test/基础密码学作业3.md
+++ b/test/基础密码学作业3.md
@@ -42,18 +42,22 @@ DES结构也叫Feistel网络，在Feistel网络中，加密的各个步骤成为
  通过上述过程，可以看到，右侧并没有被加密，所以我们需要用不同的子密钥对一轮的处理多次，并在每两轮处理之间将左右数据对调。就像下面的模型图<br>
 ![](https://github.com/jSomething-for-Nothing/cryptography/blob/master/test/Feistel%E7%BD%91%E7%BB%9C%E4%B8%89%E8%BD%AE%E5%8A%A0%E5%AF%86.png)<br>
 ### DES解密
-
+DES的解密可以使用和加密完全相同的结构，只需要按照相反的顺序来使用子密钥就可以了。也就是说，用相同的子密钥运行两次Feistel网络，就可以实现“明文->密文->明文”的过程。<br>
 ## 三重DES
 三重DES（3DES）就是将DES重复三次得到的一种密码算法。明文经三次DES处理才会变成密文，由于DES的密钥是56比特，所以3DES的密钥长度是168比特。三重DES的加密过程是“加密->**解密**->加密”。<br>
-三重DES的解密过程，刚好和加密过程相反，是执行“解密->加密->解密”的操作。
+三重DES的解密过程，刚好和加密过程相反，是执行“解密->加密->解密”的操作。<br>
 ## AES
 Rijndael分组密码算法于2000年被选为新一代AES。Rijndael分组长度为128比特，密钥长度以32item为单位，在128比特到256比特范围内选择。该算法由多个*轮*组成，使用SPN结构。<br>
 Rijndael输入分组128比特，Rijindael的加密过程分四步：<br>
 - 首先SubBytes处理,逐字节的对16字节的输入进行处理。以每个字节的值为索引，从一张替换表中找到对应得值。也就是将一个字节的值换成另一个字节的值。<br>
 - 其次ShiftRows处理：将上一步输出以字节为单位进行打乱处理。
 - MixColumns处理，对四字节的值进行比特运算，把他变成另一个4字节的值。
-- AddRoundKey处理，将MixColumns的输出与轮密钥进行XOR。
+- AddRoundKey处理，将MixColumns的输出与轮密钥进行XOR。<br>
 在Rijndael中，需要进行10~14轮上述运算。每轮计算模型如下图所示<br>
+![](https://github.com/jSomething-for-Nothing/cryptography/blob/master/test/Rijndeal%E5%8A%A0%E5%AF%86.png)
+Rijindael不能像Feistel一样用同一结构实现加解密，而是通过每一步都进行反向运算来实现解密。<br>
 ![]()
+
+
 
 
