--- a/test/基础密码学作业3.md
+++ b/test/基础密码学作业3.md
@@ -16,11 +16,9 @@ t->01110100<br>
 - 产生一段与明文长度相同的随机比特序列。可以用投硬币的方式产生。<br>
 01101011 11111010 01001000 11011000 01100101 11010101 10101111 00011100 密钥<br>
 - 将明文与密钥进行XOR运算并得到新的比特序列。<br>
-| /   | 比特序列                                                                 |  /  |
-| --- | :---------------------------------------------------------------------: | --：|
-| /   | 01101101 01101001 01100100 01101110 01101001 01100111 01101000 01110100 | 明文 |
-| XOR | 01101011 11111010 01001000 11011000 01100101 11010101 10101111 00011100 | 密钥 |
-| /   | 00000110 10010011 00101100 10110110 00001100 10110010 11000111 01101000 | 密文 |
+      01101101 01101001 01100100 01101110 01101001 01100111 01101000 01110100   明文 <br>
+ XOR  01101011 11111010 01001000 11011000 01100101 11010101 10101111 00011100   密钥 <br>
+      00000110 10010011 00101100 10110110 00001100 10110010 11000111 01101000   密文 <br>
  -一次性密码本的解密，其实就是加密的反向运算，也就是说，用密文和密钥进行XOR运算，就可以得到明文。各位同学自己尝试一下解密吧！<br>
  **CTF长征一小步**<br>
  为什么一次性密码本是无法破译的？？？<br>
@@ -43,7 +41,7 @@ DES结构也叫Feistel网络，在Feistel网络中，加密的各个步骤成为
 ![](https://github.com/jSomething-for-Nothing/cryptography/blob/master/test/Feistel%E7%BD%91%E7%BB%9C%E4%B8%89%E8%BD%AE%E5%8A%A0%E5%AF%86.png)<br>
 ### DES解密
 DES的解密可以使用和加密完全相同的结构，只需要按照相反的顺序来使用子密钥就可以了。也就是说，用相同的子密钥运行两次Feistel网络，就可以实现“明文->密文->明文”的过程。同理，多轮的Feistel网络，只需要按照n->1的顺序使用子密钥就可以实现解密<br>
-！[]()
+！[](https://github.com/jSomething-for-Nothing/cryptography/blob/master/test/Feistel%E8%A7%A3%E5%AF%86.png)
 ## 三重DES
 三重DES（3DES）就是将DES重复三次得到的一种密码算法。明文经三次DES处理才会变成密文，由于DES的密钥是56比特，所以3DES的密钥长度是168比特。三重DES的加密过程是“加密->**解密**->加密”。<br>
 三重DES的解密过程，刚好和加密过程相反，是执行“解密->加密->解密”的操作。<br>
