Update and rename 基础密码学 to 基础密码学.md

--- a/test/基础密码学.md
+++ b/test/基础密码学.md
@@ -29,4 +29,9 @@ SHA-1的计算是以输入分组为单位计算的。每个输入分组计算出
 
 ## MD5
 MD5即信息摘要算法第五版。是一种有广泛应用的哈希函数。用来提供消息的完整性保护。他能够对消息产生128比特的散列值。<br>
-
+MD5是一种不可逆的算法，通过信息摘要算法得到的信息是不完整的，所以也不能得到原始数据。<br>
+MD5以512比特信息分组来处理输入的信息，每一个分组又被划分成16组*32bite分组。经一系列的算法变化得到4个32比特分组，这个四个32比特分组生成128比特的散列值。<br>
+###应用
+1.防止被篡改
+2.防治直接看到明文
+3.防止抵赖
