Update and rename 基础密码学.md to 基础密码学四.md

--- a/test/基础密码学四.md
+++ b/test/基础密码学四.md
@@ -1,7 +1,25 @@
 # 公钥密码
+公钥密码中，密钥分为*加密密钥*和*解密秘钥*两种。加密密钥一般是公开的，称为公钥。解密秘钥由自己保存绝不公开，称为私钥。童谣和死要统称为密钥对<br>
+
 ## RSA
+加密：密文=明文^E mod N<br>
+解密：明文=密文^D mod N<br>
+(a^c表示a的c次方)。
+公钥：（E,N) 私钥：（D,N）
+**如何生成密钥对呢？？？**
+1.生成N<br>
+N=p* q(p,q是两个非常大的质数)<br>
+2.生成L（L是生成秘钥对过程中使用的数）<br>
+L=lcm(p-1,q-1) (L是p-1和q-1的最小公倍数)<br>
+3.生成E<br>
+1<E<L
+gcd(E,L)=1(E,L的最大公约数为1)<br>
+检查E,L的最大公约数是否为1，可以用辗转相除法。感兴趣的同学可以自行拓展，在此不做赘述。<br>
+4.生成D
+1<D<L
+E* DmodL=1
 ## 中间人攻击
-# 混合加密
+中间人攻击是一种针对机密性的有效攻击。攻击者混入发送者和接收者之间，对发送者伪装成接受者，对接收者伪装成发送者。<br>
 
 # 单向散列函数
 单向散列函数有一个输入和一个输出，输入称为消息，输出成为散列值。<br>
@@ -22,16 +40,29 @@ sha-1函数的消息长度在0~2^64比特之间。每512比特为一个输入分
 填充方法是：在消息末尾添加1比特的“1”，在“1”后面联系添加“0”，直到消息长度为512比特的整数倍。但是最后一个分组的最后64比特空出来保存原始信息长度。<br>
 ### 2.计算W0~W79
 SHA-1的计算是以输入分组为单位计算的。每个输入分组计算出80个32比特。这些值用到第四步的计算中。首先，一个输入分组分成16组32比特信息，命名为W0~W15。<br>
-剩余的W16~W79的计算方法：Wt=Wt-16 XOR Wt-14 XOR Wt-8 XOR Wt-3。<br>
+剩余的W16~W79的计算方法：Wt=Wt-16 XOR Wt-14 XOR Wt-8 XOR Wt-3循环左移1比特。<br>
 ### 3.分组处理
+
 ### 4.单步处理
-
-
 ## MD5
 MD5即信息摘要算法第五版。是一种有广泛应用的哈希函数。用来提供消息的完整性保护。他能够对消息产生128比特的散列值。<br>
 MD5是一种不可逆的算法，通过信息摘要算法得到的信息是不完整的，所以也不能得到原始数据。<br>
-MD5以512比特信息分组来处理输入的信息，每一个分组又被划分成16组*32bite分组。经一系列的算法变化得到4个32比特分组，这个四个32比特分组生成128比特的散列值。<br>
-###应用
+MD5以512比特信息分组来处理输入的信息，每一个分组又被划分成16组32比特分组。经一系列的算法变化得到4个32比特分组，这个四个32比特分组生成128比特的散列值。<br>
+在网上经常会看到32位和16位的MD5值，两者是有部分相同的，32位的MD5值去掉前八位和后八位就是16位了。<br>
+MD5算法流程分四步<br>
+1.填充
+2.设置4个初始参数
+设置4个32位的链接变量：A=0x01234567;B=0x89abcdef;C=0xfedcba98;D=0x76543210；用来计算信息摘要。
+3.对输入数据做变换
+F(X,Y,Z)=(X&Y)|((~X)&Z);
+G(X,Y,Z)=(X&Z)|(Y&(~Z));
+H(X,Y,Z)=X^Y^Z
+I(X,Y,Z)=Y^(X|(~Z))
+
+
+
+### 应用 ###
 1.防止被篡改
 2.防治直接看到明文
 3.防止抵赖
+
