--- a/test/基础密码学四.md
+++ b/test/基础密码学四.md
@@ -66,5 +66,5 @@ I(X,Y,Z)=Y^(X|(~Z))<br>
 3.防止抵赖
 ### 最后一段话！！
 CTF密码学部分通常会涉及到逆向，web，代码的知识，各位同学要拓展自己的知识面，以便可以在看到题目的时候想到相应的密码模型。<br>
-这里有CTF可能用到的密码的形式。
+这里有CTF可能用到的密码的形试[CTF中那些脑洞大开的编码和加密]http://www.360doc.com/content/16/0906/21/27425026_588911412.shtml
 
