--- a/test/基础密码学四.md
+++ b/test/基础密码学四.md
@@ -42,7 +42,7 @@ sha-1函数的消息长度在0~2^64比特之间。每512比特为一个输入分
 SHA-1的计算是以输入分组为单位计算的。每个输入分组计算出80个32比特。这些值用到第四步的计算中。首先，一个输入分组分成16组32比特信息，命名为W0~W15。<br>
 剩余的W16~W79的计算方法：Wt=Wt-16 XOR Wt-14 XOR Wt-8 XOR Wt-3循环左移1比特。<br>
 ##### 3.分组处理
-
+（imagin）
 ##### 4.单步处理
 总结：sha-1能够产生160比特的散列值,也就是20字节
 ## MD5
@@ -60,11 +60,13 @@ G(X,Y,Z)=(X&Z)|(Y&(~Z));<br>
 H(X,Y,Z)=X^Y^Z<br>
 I(X,Y,Z)=Y^(X|(~Z))<br>
 (&代表与，~代表反，^代表异或)<br>
+### 总结
+MD5的信息摘要长度是128比特，16字节
 ### 应用 ###
 1.防止被篡改
 2.防治直接看到明文
 3.防止抵赖
 ### 最后一段话！！
 CTF密码学部分通常会涉及到逆向，web，代码的知识，各位同学要拓展自己的知识面，以便可以在看到题目的时候想到相应的密码模型。<br>
-这里有CTF可能用到的密码的形试[CTF中那些脑洞大开的编码和加密]http://www.360doc.com/content/16/0906/21/27425026_588911412.shtml
+这里有CTF可能用到的密码的形试![CTF中那些脑洞大开的编码和加密]http://www.360doc.com/content/16/0906/21/27425026_588911412.shtml
 
