--- a/test/基础密码学四.md
+++ b/test/基础密码学四.md
@@ -42,8 +42,9 @@ sha-1函数的消息长度在0~2^64比特之间。每512比特为一个输入分
 SHA-1的计算是以输入分组为单位计算的。每个输入分组计算出80个32比特。这些值用到第四步的计算中。首先，一个输入分组分成16组32比特信息，命名为W0~W15。<br>
 剩余的W16~W79的计算方法：Wt=Wt-16 XOR Wt-14 XOR Wt-8 XOR Wt-3循环左移1比特。<br>
 ##### 3.分组处理
-[imagin]()
+[imagin](https://github.com/jSomething-for-Nothing/cryptography/blob/master/picture/%E5%88%86%E7%BB%84%E5%A4%84%E7%90%86.png)
 ##### 4.单步处理
+[imagin]()
 总结：sha-1能够产生160比特的散列值,也就是20字节
 ## MD5
 MD5即信息摘要算法第五版。是一种有广泛应用的哈希函数。用来提供消息的完整性保护。他能够对消息产生128比特的散列值。<br>
