--- a/test/基础密码学四.md
+++ b/test/基础密码学四.md
@@ -7,15 +7,15 @@
 (a^c表示a的c次方)。<br>
 公钥：（E,N) 私钥：（D,N）<br>
 **如何生成密钥对呢？？？**<br>
-1.生成N<br>
+1. 生成N
 N=p* q(p,q是两个非常大的质数)<br>
-2.生成L（L是生成秘钥对过程中使用的数）<br>
+2. 生成L（L是生成秘钥对过程中使用的数）
 L=lcm(p-1,q-1) (L是p-1和q-1的最小公倍数)<br>
-3.生成E<br>
+3. 生成E
 1<E<L
 gcd(E,L)=1(E,L的最大公约数为1)<br>
 检查E,L的最大公约数是否为1，可以用辗转相除法求公约数。感兴趣的同学可以自行拓展，在此不做赘述。<br>
-4.生成D<br>
+4. 生成D
 1<D<L<br>
 E* DmodL=1<br>
 ### 中间人攻击
@@ -27,9 +27,9 @@ E* DmodL=1<br>
 单向散列函数可以根据任意长度的消息计算出固定长度的散列值，能够跨苏计算出散列值，消息不统计算出来的散列值也不一样，并且具备单向性。<br>
 **应用**<br>
 1. 根据单向散列函数计算出的散列值（哈希值）可以检测软件是否被篡改<br>
-2. 单向散列函数可用于基于口令的加密。<br>
-3. 单向散列函数可以构造消息认证码。<br>
-4. 数字签名也会用到单向散列函数。<br>
+2. 单向散列函数可用于基于口令的加密。
+3. 单向散列函数可以构造消息认证码。
+4. 数字签名也会用到单向散列函数。
 5. 使用单向散列函数可以构造伪随机数生成器。
 6. 利用单相思浓烈函数可以构造一次性口令.
 ## SHA-1
@@ -42,33 +42,34 @@ sha-1函数的消息长度在0~2^64比特之间。每512比特为一个输入分
 SHA-1的计算是以输入分组为单位计算的。每个输入分组计算出80个32比特。这些值用到第四步的计算中。首先，一个输入分组分成16组32比特信息，命名为W0~W15。<br>
 剩余的W16~W79的计算方法：Wt=Wt-16 XOR Wt-14 XOR Wt-8 XOR Wt-3循环左移1比特。<br>
 ##### 3.分组处理
-[imagin](https://github.com/jSomething-for-Nothing/cryptography/blob/master/picture/%E5%88%86%E7%BB%84%E5%A4%84%E7%90%86.png)
+分组处理是为了将输入分组的512比特数据和SHA-1保持的160比特的内部状态（五个缓冲区）进行混合，SHA-1最终输出的160比特散列值，就是处理结束后的内部状态。下图展示的就是输入分组与五个缓冲区是怎么混合的！
+![imagin](https://github.com/jSomething-for-Nothing/cryptography/blob/master/picture/%E5%88%86%E7%BB%84%E5%A4%84%E7%90%86.png)
 ##### 4.单步处理
-[imagin]()
-总结：sha-1能够产生160比特的散列值,也就是20字节
-## MD5
+分组处理的80个步骤中的每一步的详细过程都是如下图所示。主要是为了使内部状态（缓冲区A,B,C,D,E）产生变化。
+![imagin](https://github.com/jSomething-for-Nothing/cryptography/blob/master/picture/%E5%8D%95%E6%AD%A5%E5%A4%84%E7%90%86.png)
+
+## [MD5](http://blog.csdn.net/xiaofengcanyuexj/article/details/37698801)
 MD5即信息摘要算法第五版。是一种有广泛应用的哈希函数。用来提供消息的完整性保护。他能够对消息产生128比特的散列值。<br>
 MD5是一种不可逆的算法，通过信息摘要算法得到的信息是不完整的，所以也不能得到原始数据。<br>
 MD5以512比特信息分组来处理输入的信息，每一个分组又被划分成16组32比特分组。经一系列的算法变化得到4个32比特分组，这个四个32比特分组生成128比特的散列值。<br>
 在网上经常会看到32位和16位的MD5值，两者是有部分相同的，32位的MD5值去掉前八位和后八位就是16位了。<br>
-MD5算法流程分四步<br>
-1. 填充<br>
-2. 设置4个初始参数<br>
+**MD5算法流程**
+1. 填充
+参考SHA-1。<br>
+2. 设置4个初始参数
 设置4个32位的链接变量：A=0x01234567;B=0x89abcdef;C=0xfedcba98;D=0x76543210；用来计算信息摘要。<br>
-3. 对输入数据做变换<br>
+3. 对输入数据做变换
 F(X,Y,Z)=(X&Y)|((~X)&Z);<br>
 G(X,Y,Z)=(X&Z)|(Y&(~Z));<br>
 H(X,Y,Z)=X^Y^Z<br>
 I(X,Y,Z)=Y^(X|(~Z))<br>
-(&代表与，~代表反，^代表异或)<br>
-### 总结
-MD5的信息摘要长度是128比特，16字节
+(&代表与，~代表反，^代表异或.|代表或)<br>
 ### 应用 ###
 1. 防止被篡改
 2. 防治直接看到明文
 3. 防止抵赖
 ### 最后一段话！！
 CTF密码学部分通常会涉及到逆向，web，代码的知识，各位同学要拓展自己的知识面，以便可以在看到题目的时候想到相应的密码模型。<br>
-这里有CTF可能用到的密码的形试
+这里有CTF可能用到的密码的形试和工具，大家自行体验一把<br>
 [CTF中那些脑洞大开的编码和加密](http://www.360doc.com/content/16/0906/21/27425026_588911412.shtml)
-
+CTF工具[CTFtools](https://www.ctftools.com/)
