--- a/test/基础密码学四.md
+++ b/test/基础密码学四.md
@@ -23,7 +23,7 @@
 
 # 单向散列函数
 单向散列函数有一个输入和一个输出，输入称为消息，输出成为散列值。<br>
-单向散列函数是一种采集文件指纹的技术，单向散列函数产生的散列值，相当于消息的指纹。<br>
+单向散列函数是一种采集文件指纹的技术，单向散列函数产生的散列值，相当于消息的指纹。可以用来检测软件是否被篡改。<br>
 单向散列函数可以根据任意长度的消息计算出固定长度的散列值，能够跨苏计算出散列值，消息不统计算出来的散列值也不一样，并且具备单向性。<br>
 **应用**<br>
 1. 根据单向散列函数计算出的散列值（哈希值）可以检测软件是否被篡改<br>
