--- a/test/基础密码学四.md
+++ b/test/基础密码学四.md
@@ -34,6 +34,7 @@
 6. 利用单相思浓烈函数可以构造一次性口令.
 ## SHA-1
 SHA-1是哈希函数的一种。它能够从最大2^64比特的消息中计算出160比特的散列值。<br>
+！[imagin](https://github.com/jSomething-for-Nothing/cryptography/blob/master/picture/sha-1%E6%A6%82%E8%A6%81.png)
 SHA-1函数的运行总共有四个步骤：<br>
 ##### 1.填充
 sha-1函数的消息长度在0~ 2^64比特之间。每512比特为一个输入分组，若长度不是512比特的整数倍就需要对sha-1信息进行填充。<br>
