--- a/test/消息认证码.md
+++ b/test/消息认证码.md
@@ -1,16 +1,91 @@
 # 消息认证码
 
 消息的认证指的是“消息来自正确的发送者”这一属性。也就是确认消息不是由其他人伪装成发送者发出的。<br>
-消息认证码简称MAC，是一种确认完整性并进行认证的技术。它可以接受任意长度的消息和一个发送者与接受者之间的共享秘钥，并输出固定长度的数据，这个数据称为MAC值。这里大家可以发现，消息认证码跟单项三列函数很像，都是接受任意长度的消息，生成固定长度的输出。只不过消息认证码需要一个发送者和接受者共享的秘钥。所以大家可以这么理解：消息认证码是一种与秘钥相关的单向散列函数。<br>
+消息认证码简称MAC，是一种确认完整性并进行认证的技术。它可以接受任意长度的消息和一个发送者与接受者之间的共享秘钥，并输出固定长度的数据，这个数据称为MAC值。这里大家可以发现，消息认证码跟单项散列函数很像，都是接受任意长度的消息，生成固定长度的输出。只不过消息认证码需要一个发送者和接受者共享的秘钥。所以大家可以这么理解：消息认证码是一种与秘钥相关的单向散列函数。<br>
 ## 消息认证码实现方法
 1. 使用单向散列函数实现
 2. 利用分组密码实现
 ## HMAC
-
-
-## 攻击
+HMAC是使用单向散列函数来构造消息认证码的方法，任何高强度的单向散列函数都可以用于HMAC。
+**HMAC计算消息认证码的过程：**
+1. 填充密钥
+如果密钥比单相思那列函数的分组长度短，在需要在末尾填充0，知道秘钥长度和单向散列函数分组长度一致；
+2. 密钥与ipad进行XOR
+ipad是将00110110这一序列不断循环知道达到分组长度形成的比特序列。用填充后的密钥跟ipad进行XOR运算。XOR得到的值称为ipadkey。
+3. 与消息结合
+把ipadkey的比特序列附加在消息后面。
+4. 计算散列值
+将（3）得到的比特序列输入单向散列函数，并计算散列值
+5. 填充后的秘钥与opad进行XOR计算。
+opad是将01011100这一比特序列不断循环直到长度达到分组长度所形成的比特序列。用填充后的密钥和opad进行XOR运算。得到的结果称为opadkey。
+6. 组合
+把(4)得到的散列值拼在opadkey后面。
+7. 计算散列值
+把（6）得到的序列输入单向散列函数，并计算散列值，这个散列值就是最终的消息认证码（MAC）
+## 重放攻击
+主动攻击者可以利用事先保存的争取的MAC值，不断重放来发动攻击：
+1. 主动攻击者实现窃听发送者和接受者之间的通信
+2. 主动攻击者从A银行向B银行的的账户汇款，A银行根据汇款信息计算出正确的MAC值，并把MAC值和效益一起发送到B银行
+3. B银行收到消息并计算出的MAC值，并把计算结果和收到的MAC值进行对比。两个MAC值相等，可以判断是合法的汇款请求。
+4. 主动攻击者窃听A银行发送给B银行的消息和MAC值，并保存。
+5. 主动攻击者把窃听到的消息和MAC值啊送给B银行
+6. B银行把收到的MAC值和计算的MAC进行对比，两个值相等，于是B银行向A银行的账户汇款
+7. 城府步骤5和6，主动攻击者就可以获取大量钱财。
+在重放攻击过程中，主动攻击者并没有破解消息认证码，只是把A银行的正确的MAC值把存下来，并重复利用。所以这种攻击称为重放攻击。
+### 预防重放攻击
+序号
+约定每一次都发送的消息赋予一个递增的编号。
+时间戳
+约定在发送时包含当前的时间，收到以前的信息，及时MAC值正确也当做错误信息处理。
+nonce
+在通信之前，接受者先向发送者发送一个一次性的随机数，这个随机数称为nonce,发送者在消息中包含这个nonce并计算MAC值，有一每次发送的nonce不同，所以也就不能进行重放攻击。
 ## 缺陷
+- 接受者Bob接收到来自A的消息之后，不能向第三方证明消息来自A。
+- 接受者B收到包含MAC的消息，可以利用A和B空想的密钥计算出来，从而Bob能够确定消息来自A，但是A可以否认消息来自它。因为没有人可以证实消息确实来自A。也就是消息认证码无法防止否认。
 
 # 数字签名
+消息认证码可以确定消息是否被村改或者发送者的身份是都被伪装，但是消息认证码不能防止否认。如果发送者不承认发送过消息怎么办呢？数字签名的作用就是防止抵赖。
 
-消息认证码可以确定消息是否被村改或者发送者的身份是都被伪装，但是消息认证码不能防止否认，也就是不能确保发送者否认发出过这个消。
+## 数字签名的生成和验证
+发送者A生成数字签名，接收方B验证数字签名，不过也可以利用第三方来验证数字签名。数字签名对签名密钥和验证密钥进行了区分，签名密钥只有签名的人才持有，验证密钥任何人都可以拥有。
+数字签名对签名密钥和验证密钥进行区分，使用验证密钥无法生成密钥。
+可以直接对消息签名，也可以对消息的散列值签名。
+
+## 通过RSA实现数字签名
+签名=消息^D mod N,签名者的私钥(D,N)。
+
+
+
+# 证书
+公钥证书简称证书，是记载了个人信息，和属于个人的公钥。并由认证机构施加数字签名。只要有证书，就能保障公钥属于此人。证书的作用是降低中间人攻击的风险。
+证书是怎么工作的
+1. Bob生成秘钥对，
+2. 再认证机构注册公钥
+请认证机构对公钥加上数字签名
+3. 认证机构用自己的私钥对Bob的弓腰施加数字签名并生成证书。
+4. 得到带有认证机构数字签名的公钥
+5. 使用认证机构的公钥验证数字签名，确认共要的合法性
+6. 用共要加密信息并发送
+7. 既要解密得到消息
+
+## 公钥基础设施
+公钥基础设施（PKI）是为了能够更有效地运用公钥制定的一些列规范和规格的总称。并非指某一种规范或规格。
+KPI组成要素：用户：使用PKI的人，认证机构：颁发证书的人，仓库：保存证书的数据库。
+
+**认证机构的工作：**
+1. 生成秘钥对
+生成密钥对有两种方法：一种是KPI自己生成；另一种是认证机构生成。
+2.注册证书。
+当用户自行生成密钥对是，用户会请求认证机构来生成证书。生成那个证书时，会使用认证机构的私钥来进行数字签名。
+3. 作废证书和CRL
+当用户的私钥丢失，被盗时，认证机构需要对证书进行作废。要作废证书，认证机构先要制作一份作废证书清单（CRL）。总的来说，当我们手上有一份证书时，仅凭证书上的认证机构签名和有效期，并不能确定证书是否有效，还需要查询认证机构最新的CRL，看证书是否有效。
+## 对证书的攻击：
+在公钥注册之前进行攻击
+
+注册相似任命进行攻击、窃取认证机构的私钥进行攻击。
+攻击者伪装成认证机构进行攻击
+
+钻CRL空子进行攻击
+
+## SSL和TLS
+SSL/TLS是世界上应用最广泛的密码通信方法，当进行SSL/LTS通信时
