--- a/test/基础密码学四.md
+++ b/test/基础密码学四.md
@@ -1,5 +1,5 @@
 # 公钥密码
-公钥密码中，密钥分为*加密密钥*和*解密秘钥*两种。加密密钥一般是公开的，称为公钥。解密秘钥由自己保存绝不公开，称为私钥。加密密钥和解密密钥要统称为密钥对<br>
+公钥密码中，密钥分为*加密密钥*和*解密秘钥*两种。加密密钥一般是公开的，称为公钥。解密秘钥由自己保存绝不公开，称为私钥。公钥和私钥统称为密钥对<br>
 
 ## RSA
 - 加密：密文=明文^E mod N
