--- a/test/密码5.md
+++ b/test/密码5.md
@@ -166,11 +166,14 @@ PBE解密
 1. 重建KEK。用之前保存的盐和Alice输入的口令一起输入单向散列函数，生成KEK。
 2. 解密会话密钥。获取之前保存的“用KEK加密的会话秘钥”，用重建的KEK解密，获取会话密钥
 3. 解密消息。用重建的会话秘钥对加密信息进行解密。
-
+![](https://github.com/jSomething-for-Nothing/cryptography/blob/master/picture/mima/PEB%E8%A7%A3%E5%AF%86.png)
+*盐的作用*
+盐是由伪随机数生成器生成随机数。在生成密钥KEK时会和口令一起被输入单向散列函数。盐是用来防御字典攻击的。<br>
 ### 如何生成安全的口令
-使用只有自己才知道的信息
-将多个不同的口令分开使用
-
+- 使用只有自己才知道的信息
+- 将多个不同的口令分开使用
+- 有效利用笔记
+- 理解口令的局限性
 
 # 随机数
 随机数在密码技术中扮演者十分重要的角色。
