--- a/test/密码5.md
+++ b/test/密码5.md
@@ -154,7 +154,7 @@ Diffie-Hellman密钥交换可以使通信双方仅通过交换一些可以公开
 - Bob将G^B mod P这个数发送给Alice。
 - Alice将Bob发来的数计算A次方兵求mod P.
 - Bob用Alice发过来的数计算B次方并求mod P
-
+![](https://github.com/jSomething-for-Nothing/cryptography/blob/master/picture/mima/DH.png)
 ### 基于口令的密码（PBE）
 基于口令的密码是一种根据口令生成密钥并用该密钥进行加密的方法。加密解密使用同一个密钥。
 PBE加密包含三个步骤：
@@ -195,7 +195,6 @@ PBE解密
 针对随机数池进行攻击。
 
 # PGP
-PGP是一个很好用的密码软件，它几乎具备现代密码学所必须的所有功能。包括：对称密码，公钥密码，数字签名，单向散列函数。证书，压缩，文本数据，大文件的查分和拼合，钥匙串管理等。
-
-## 信任网
+PGP是一个很好用的密码软件，它几乎具备现代密码学所必须的所有功能。包括：对称密码，公钥密码，数字签名，单向散列函数。证书，压缩，文本数据，大文件的查分和拼合，钥匙串管理等。<br>
+**信任网**<br>
 使用PGP时，确认自己得到的公钥的合法性时非常重要的。因为公钥可能会通过中间人攻击被替换。但是PGP却没有使用认证机构，而是采用信任网的形式。在这种形式中，PGP的用户会互相对对方的公钥进行数字签名。信任网的要点是“不依赖认证机构，而是建立人与人之间的信任关系”。
