--- a/test/密码5.md
+++ b/test/密码5.md
@@ -2,9 +2,6 @@
 
 消息的认证指的是“消息来自正确的发送者”这一属性。也就是确认消息不是由其他人伪装成发送者发出的。<br>
 消息认证码简称MAC，是一种确认完整性并进行认证的技术。它可以接受任意长度的消息和一个发送者与接受者之间的共享秘钥，并输出固定长度的数据，这个数据称为MAC值。这里大家可以发现，消息认证码跟单项散列函数很像，都是接受任意长度的消息，生成固定长度的输出。只不过消息认证码需要一个发送者和接受者共享的秘钥。所以大家可以这么理解：消息认证码是一种与秘钥相关的单向散列函数。<br>
-## 消息认证码实现方法
-1. 使用单向散列函数实现
-2. 利用分组密码实现
 ## HMAC
 HMAC是使用单向散列函数来构造消息认证码的方法，任何高强度的单向散列函数都可以用于HMAC。
 <br>
@@ -141,9 +138,8 @@ TLS密码技术小结
 # 密钥
 密钥是一个比特序列，它和明文具有同等重要的地位。消息的机密性并不依赖于密码算法本身，而是依赖密钥的妥善保管。
 ## 密钥分类
-在对称密码中，发送者加密和接受者解密使用同一个密钥，所以对称密码的密钥又称共享密钥。
-在公钥密码中，加密和解密使用的密钥不同，加密使用的密钥是公开的所以称为公钥，解密使用的密钥称为私钥，因为只有解密的人才可以持有私钥。
-在消息认证码中，发送者和接受者使用共享的密钥进行认证，
+在对称密码中，发送者加密和接受者解密使用同一个密钥，所以对称密码的密钥又称共享密钥。在公钥密码中，加密和解密使用的密钥不同，加密使用的密钥是公开的所以称为公钥，解密使用的密钥称为私钥，因为只有解密的人才可以持有私钥。对称密码和公钥密码额密钥都是用来确保机密性的密钥，相对地，消息认证码和数字签名所使用的的密钥是用于认证的密钥。<br>
+一般来说，加密内容的密钥称为CKE，加密迷药的密钥称为KEK。
 # Diffie-Hellman密钥交换
 Diffie-Hellman密钥交换可以使通信双方仅通过交换一些可以公开的信息就能够生成共享的秘密数字。这种方法虽然叫密钥交换，但实际上方并没有真的交换密钥，而是通过计算生成一个相同的共享密钥。
 ### Diffie-Hellman密钥交换的步骤
@@ -176,14 +172,15 @@ PBE解密
 - 理解口令的局限性
 
 # 随机数
-随机数在密码技术中扮演者十分重要的角色。
-随机数本身具有：随机性，不可预测性，不可重现性。
+随机数在密码技术中扮演者十分重要的角色。随机数本身具有：随机性，不可预测性，不可重现性。
 ### 伪随机数生成器
-随机数可以通过硬件生成也可以通过软件生成，生成随机数的硬件设备称为随机数生成器，生成随机数的软件设备称为伪随机数生成器。
-伪随机数生成器具有“内部状态”，并根据外部输入的“种子”，来生成伪随机数。伪随机数生成器的内部状态指伪随机数生成器所管理的内存中的数值。伪随机数生成器每响应一次伪随机数请求，就会改变一次自己的内部状态。
-为了生成伪随机数，伪随机数生成器需要称为种子的信息，伪随机数的种子是用来为伪随机数生成器内部状态进行初始化的。伪随机数的种子是一串随机的比特序列。伪随机数生成器是公开的，但还是种子是需要自己保密的。
+随机数可以通过硬件生成也可以通过软件生成，生成随机数的硬件设备称为随机数生成器，生成随机数的软件设备称为伪随机数生成器。<br>
+伪随机数生成器具有“内部状态”，并根据外部输入的“种子”，来生成伪随机数。伪随机数生成器的内部状态指伪随机数生成器所管理的内存中的数值。伪随机数生成器每响应一次伪随机数请求，就会改变一次自己的内部状态。<br>
+为了生成伪随机数，伪随机数生成器需要称为种子的信息，伪随机数的种子是用来为伪随机数生成器内部状态进行初始化的。伪随机数的种子是一串随机的比特序列。伪随机数生成器是公开的，但还是种子是需要自己保密的。<br>
 **伪随机数生成器**
-线性同余法是一种使用很广泛的伪随机数生成器法，但它不能用于密码技术。线性同余法的算法是这样的：假设我们要生成伪随机数R0，R1，R2等，首先根据伪随机数的种子可以计算出第一个伪随机数。R0=（A· 种子+C）mod M。在这里A,C,M都是常量。且A和C需要小于M。接下来根据R0计算下一个伪随机数R1.R1=（A·R0+C）modM。以此，根据当前的伪随机数Rn计算下一个伪随机数R(n-1).:R（n-1）=（A·Rn+C）mod M。
+线性同余法：<br>
+线性同余法是一种使用很广泛的伪随机数生成器法，但它不能用于密码技术。线性同余法的算法是这样的:<br>
+假设我们要生成伪随机数R0，R1，R2等，首先根据伪随机数的种子可以计算出第一个伪随机数。R0=（A· 种子+C）mod M。在这里A,C,M都是常量。且A和C需要小于M。接下来根据R0计算下一个伪随机数R1:R1=（A·R0+C）modM。以此，根据当前的伪随机数Rn计算下一个伪随机数R(n-1):R（n-1）=（A·Rn+C）mod M。<br>
 单向散列函数法：
 1. 伪随机数的种子初始化内部状态（计数器）
 2. 用单向散列函数计算出计数器的散列值。
@@ -195,6 +192,6 @@ PBE解密
 针对随机数池进行攻击。
 
 # PGP
-PGP是一个很好用的密码软件，它几乎具备现代密码学所必须的所有功能。包括：对称密码，公钥密码，数字签名，单向散列函数。证书，压缩，文本数据，大文件的查分和拼合，钥匙串管理等。<br>
+PGP是一个很好用的密码软件，它几乎具备现代密码学所必须的所有功能。包括：对称密码，公钥密码，数字签名，单向散列函数。证书，压缩，文本数据，大文件的拆分和拼合，钥匙串管理等。<br>
 **信任网**<br>
 使用PGP时，确认自己得到的公钥的合法性时非常重要的。因为公钥可能会通过中间人攻击被替换。但是PGP却没有使用认证机构，而是采用信任网的形式。在这种形式中，PGP的用户会互相对对方的公钥进行数字签名。信任网的要点是“不依赖认证机构，而是建立人与人之间的信任关系”。
